refactor: pr comments

--- a/frontend/src/app/libs/common-components/components/ckeditor/ckeditor.component.html
+++ b/frontend/src/app/libs/common-components/components/ckeditor/ckeditor.component.html
@@ -1,4 +1,5 @@
 <ckeditor [config]="config"
-		  (change)="getDataCkeditor($event)"
-		  [formControl]="formControl"
-		  [readOnly]="readonly"></ckeditor>
+					[formControl]="formControl"
+					[readOnly]="readonly"
+					(change)="getDataCkeditor($event)">
+</ckeditor>
