--- a/frontend/src/app/libs/event-info/event-info.component.html
+++ b/frontend/src/app/libs/event-info/event-info.component.html
@@ -1,6 +1,6 @@
 <div class="app-event-info">
   <app-breadcrumb>
-    <app-tab-navigation (changeTab)="changeTab($event)" [tabs]="tabs"></app-tab-navigation>
+    <app-tab-navigation (changeTab)="changeTab($event)"></app-tab-navigation>
   </app-breadcrumb>
   
   <main class="app-event-info__main">
